# haskell-kubernetes-mcp

./: .envrc  CHANGELOG.md  README.md  flake.nix  justfile  kubernetes-mcp.cabal  server.py  test-mcp-integration.sh
app/: Main.hs
charts/kubernetes-mcp/: Chart.yaml  values.yaml
charts/kubernetes-mcp/templates/: deployment.yaml  rbac.yaml  service.yaml
src/: Config.hs  Health.hs  Kubernetes.hs  Server.hs  Types.hs
test/: Main.hs
